<resources>
    <string name="app_name">Conference Scheduler</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_">Continue</string>
    <string name="signup">SignUp</string>
    <string name="add_admins">Add Admins</string>
    <string name="create">Create</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="add_speaker">Add Speaker</string>
    <string name="speaker_name">Speaker Name</string>
    <string name="speaker_details">Speaker Details</string>
    <string name="add_speaker_photo">Add speaker photo</string>
    <string name="create_conference">Create Conference</string>
    <string name="conference_name">Conference Name</string>
    <string name="add_conference_photo">Add Conference Photo</string>
    <string name="create_event">Create Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="event_location">Event Location</string>
    <string name="select_date_and_time">Select date and time</string>
    <string name="create_admin">Create Admin</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="schedule">Schedule</string>
    <string name="conference_list">Conference List</string>
    <string name="there_is_no_conference">There is no Conference</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="sponsors">Sponsors</string>
    <string name="maps">Maps</string>
    <string name="speakers">Speakers</string>
    <string name="edit">Edit</string>
    <string name="add_sponsor">Add Sponsor</string>
    <string name="add_photo">Add Photo</string>
</resources>