<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/no_event" />

        <TextView
            android:id="@+id/tvHeading"
            style="@style/Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textColor="?colorPrimary"
            tools:text="@string/create_conference" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfName"
            style="@style/TextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/conference_name"
            app:endIconDrawable="@drawable/ic_edit"
            app:endIconMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConferenceName"
                style="@style/TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="20dp">

            <LinearLayout
                android:id="@+id/llAddConferencePhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivConferencePhoto"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_image" />

                <TextView
                    android:id="@+id/tvConferenceImagePick"
                    style="@style/Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/add_conference_photo" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btCreate"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            tools:text="@string/create" />

    </LinearLayout>

</ScrollView>